finished styling bootstrap info cards in index page and corrected alignment

--- a/day2-activity/assets/css/index.css
+++ b/day2-activity/assets/css/index.css
@@ -4,10 +4,10 @@
     background-image: url("../images/walid.jpg");
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover;
-    background-position: 50% 80%;
+    background-position: 50% 75%;
     margin: 0;
     width: inherit;
-    height: 400px;
+    height: 380px;
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -33,8 +33,6 @@
     font-size: 65px;
 }
 
-.card {
-    background-color: #292b2a;
-}
+
 
 
