--- a/day2-activity/assets/css/style.css
+++ b/day2-activity/assets/css/style.css
@@ -9,8 +9,8 @@
 }
 
 #logo {
-    width: 100px;
-    height: 40px;
+    width: 90px;
+    height: 30px;
 }
 
 
